--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -13,10 +13,16 @@ body {
 }
 
 
-a.nav-link {
+nav a.nav-link {
+  letter-spacing: 0.063rem;
   cursor: pointer;
 }
 
 .navbar-nav > li > a {
+  margin: 0 0.2rem 0 0.2rem;
   color: var(--primary-white);
+}
+
+.container-fluid {
+  margin: 0 4.5rem 0 4.5rem;
 }
