--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
 
-body {
-  font-family: 'Roboto Condensed', sans-serif;
-}
 
 :root {
   --primary-white: #fff;
+  --weird-colour: #146C94;
 }
 
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+  background-color: #146C94;
+}
+
+/* Navbar */
+
 .brandLogo {
-  width: 5rem;
+  width: 6rem;
 }
 
 
@@ -23,6 +28,40 @@ nav a.nav-link {
   color: var(--primary-white);
 }
 
-.container-fluid {
+nav .container-fluid {
   margin: 0 4.5rem 0 4.5rem;
 }
+
+/* Intro */
+
+.intro-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 8rem;
+}
+
+.picture-container {
+  display: flex;
+  justify-content: center;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 2rem;
+}
+
+.profilePic {
+  width: 150%;
+  height: 100%;
+}
+
+.intro-text {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  width: 50%;
+  color: #fff;
+}
+
