--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -112,9 +112,7 @@ nav .container-fluid {
   height: 10%;
 }
 
-.carousel-caption {
-  background-color: black;
-  opacity: 0.8;
+.carousel-caption h5{
   margin: 0 10%;
 }
 
